src/test/ui/consts/const-eval/promoted_const_fn_fail_deny_const_err.stderr
error: reaching this expression at runtime will panic or abort
  --> $DIR/promoted_const_fn_fail_deny_const_err.rs:31:26
   |
LL |         Bar { a: &42 }.b as u8
   |         ---------------------- a raw memory access tried to access part of a pointer value as raw bytes
...
LL |     let x: &'static u8 = &(bar() + 1);
   |                          ^^-----^^^^^
   |                            |
   |                            inside call to `bar`
   |
note: lint level defined here
  --> $DIR/promoted_const_fn_fail_deny_const_err.rs:13:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: aborting due to previous error
